--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,10 @@ body{
 }
 /* ===========================Left-Nav=============================== */
 .left-navbar{
-    width: 30%;
+    width: 25%;
     margin-top: 20px;
+    float: left;
+    /* border: 1px solid red; */
 }
 .left-navbar .row{
     margin-left: 5%;
@@ -231,4 +233,195 @@ body{
     /* border: 1px solid red; */
     overflow: hidden;
     margin-top: 10px;
+}
+/* ==========================Main================== */
+.main{
+    width: 44%;
+    /* border: 1px solid red; */
+    float: left;
+    margin-top: 10px;
+}
+.main .stories .story{
+    float: left;
+    width: 134px;
+    /* border: 1px solid red; */
+    height: 250px;
+    margin: 2px;
+    border-radius: 10px;
+    position: relative;
+}
+.main .stories .story .story-icon{
+    height: 50px;
+    width: 50px;
+    top: 10px;
+    left: 10px;
+    border-radius: 50%;
+    position: absolute;
+    border: 5px solid #1876f2;
+}
+.main .stories .story .name{
+    top: 210px;
+    left: 40px;
+    color: #fff;
+    position: absolute;
+}
+.main .stories .story .arrow{
+    top: 100px;
+    left: 100px;
+    color: black;
+    position: absolute;
+    background-color: #ffffff;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    text-align: center;
+    color: #65676b;
+    font-size: 22px;
+    padding-top: 15px;
+}
+.main .stories .first{
+    border: 1px solid rgb(235, 230, 230);
+}
+.main .stories .story .add-story{
+    position: absolute;
+    top: 172px;
+    left: 50px;
+    text-align: center;
+    font-size: 24px;
+    background-color: #1876f2;
+    color: #fff;
+    border: 5px solid #fff;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    padding-top: 5px;
+}
+.main .stories .story .first-story{
+    height: 190px;
+    width: 133px;
+    border-radius: 10px;
+}
+.main .stories .story .body-story p{
+    text-align: center;
+    padding-top: 15px;
+}
+.main .stories .story img{
+    height: 248px;
+    width: 130px;
+    border-radius: 10px;
+}
+/* stories has been done */
+.add-post{
+    height: 130px;
+    border-radius: 10px;
+    width: 450px;
+    margin: 10px 50px 0 50px;
+    float: left;
+    background-color: #fff;
+}
+.add-post .inner-body{
+    width: 430px;
+    margin: 10px 10px;
+}
+
+.add-post .inner-body .col1{
+    width: 12%;
+    float: left;
+    height: 50%;
+}
+.add-post .inner-body .col2{
+    width: 88%;
+}
+.add-post .inner-body .col2 input{
+    width: 95%;
+    border-radius: 20px;
+    height: 30px;
+    margin-top: 10px;
+    border: transparent;
+    background-color: #f0f2f5;
+    padding-left: 20px;
+}
+.add-post .inner-body .col1 img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    float: left;
+}
+.add-post .inner-body .row2 .column{
+    width: 33%;
+    float: left;
+    text-align: center;
+}
+
+.add-post .inner-body .row2 .column .first{
+    color: #f3425f;
+    font-size: 22px;
+}
+.add-post .inner-body .row2 .column .second{
+    color: #45bd62;
+    font-size: 22px;
+}
+.add-post .inner-body .row2 .column .third{
+    color: #f7b928;
+    font-size: 22px;
+}
+.active-people{
+    height: 80px;
+    border-radius: 10px;
+    width: 450px;
+    margin: 10px 50px 10px 50px;
+    float: left;
+    background-color: #fff;
+}
+.active-people .row{
+    margin: 20px 10px 0 30px;
+    position: relative;
+}
+.active-people .row .room{
+    width: 35%;
+    float: left;
+    border: 3px solid #e7f3ff;
+    margin-right: 10px;
+    height: 37px;
+    border-radius: 30px;
+    text-align: center;
+    padding-top: 6px;
+}
+.active-people .row .room p i{
+    color: #c84bb3 !important;
+    font-size: 18px;
+}
+.active-people .row .room p{
+    color: #5490e3;
+}
+.active-people .row .right-arrow{
+    position: absolute;
+    top: -5px;
+    right: 35px;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    border: 1px solid gray;
+    text-align: center;
+    color: #9ea0a2;
+    padding-top: 10px;
+}
+.active-people .row .active1,.active2,.active3,.active4,.active5,.active6{
+    float: left;
+    width: 10%;
+}
+.active-people .row img{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+}
+.active-people .row .active-status{
+    position: absolute;
+    top: 20px;
+    height: 10px;
+    width: 10px;
+    background-color: #31a24c;
+    border: 2px solid #fff;
+    border-radius: 50%;
 }
